Add full find functionality